# ai-movie-assistant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
ai_movie_assistant/: agent.py  kp_config.py  main.py  tools.py
ai_movie_assistant/graph/: state.py
ai_movie_assistant/nodes/: _base_node.py
app/: agent.py  main.py  tools.py
app/agent/: __init__.py  agent.py  tools.py
app/agent/graph/: movie_agent.py  state.py
app/agent/llms/: llm_factory.py
app/agent/nodes/: __init__.py  _base_api_tool.py  _base_node.py  autonomous_task.py  executor_node.py  kp_utils.py  movie_reviews_summarizer.py  movie_search_by_name.py  movie_semantic_search.py  movies_search.py  people_search.py  people_search_by_name.py  planner_node.py  user_preferences.py
app/bot_handlers/: __init__.py  commands.py  messages.py
app/core/: config.py  database.py  index_db.py
app/crud/: __init__.py  base.py  message.py  user.py
app/models/: __init__.py  base.py  message.py  user.py
app/nodes/: _base_node.py
app/schemas/: message.py  user.py
docs/: features.md
